@@ -6,9 +6,9 @@
 #define	USED
 #endif
 #ifdef	NROFF
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	1.175 (gritter) 9/11/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	1.177 (gritter) 9/11/05";
 #else	/* !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	1.175 (gritter) 9/11/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	1.177 (gritter) 9/11/05";
 #endif	/* !NROFF */
 /* SLIST */
 /*
@@ -19,7 +19,7 @@ mallint.h: * Sccsid @(#)mallint.h	1.4 (gritter) 8/27/05
 malloc.c: * Sccsid @(#)malloc.c	1.3 (gritter) 8/26/05
 n1.c: * Sccsid @(#)n1.c	1.36 (gritter) 9/10/05
 n2.c: * Sccsid @(#)n2.c	1.9 (gritter) 9/5/05
-n3.c: * Sccsid @(#)n3.c	1.44 (gritter) 9/11/05
+n3.c: * Sccsid @(#)n3.c	1.45 (gritter) 9/11/05
 n4.c: * Sccsid @(#)n4.c	1.12 (gritter) 9/5/05
 n5.c: * Sccsid @(#)n5.c	1.21 (gritter) 9/2/05
 n7.c: * Sccsid @(#)n7.c	1.31 (gritter) 9/11/05
@@ -31,16 +31,16 @@ suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
 tdef.h: * Sccsid @(#)tdef.h	1.42 (gritter) 9/10/05
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.18 (gritter) 9/8/05
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.20 (gritter) 9/11/05
-nroff.d/proto.h: * Sccsid @(#)proto.h	1.16 (gritter) 9/11/05
+nroff.d/proto.h: * Sccsid @(#)proto.h	1.17 (gritter) 9/11/05
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.5 (gritter) 9/8/05
 troff.d/afm.c: * Sccsid @(#)afm.c	1.23 (gritter) 9/11/05
 troff.d/afm.h: * Sccsid @(#)afm.h	1.10 (gritter) 9/11/05
 troff.d/dev.h: * Sccsid @(#)dev.h	1.7 (gritter) 9/8/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.10 (gritter) 9/8/05
-troff.d/proto.h: * Sccsid @(#)proto.h	1.23 (gritter) 9/11/05
+troff.d/proto.h: * Sccsid @(#)proto.h	1.24 (gritter) 9/11/05
 troff.d/t10.c: * Sccsid @(#)t10.c	1.43 (gritter) 9/11/05
-troff.d/t6.c: * Sccsid @(#)t6.c	1.77 (gritter) 9/11/05
+troff.d/t6.c: * Sccsid @(#)t6.c	1.79 (gritter) 9/11/05
 troff.d/troff.h: * Sccsid @(#)troff.h	1.13 (gritter) 9/11/05
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.7 (gritter) 8/22/05
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.1 (gritter) 8/17/05
